--- a/src/components/ChooseMap/ChooseMap.module.scss
+++ b/src/components/ChooseMap/ChooseMap.module.scss
@@ -1,9 +1,16 @@
 .map {
-    border: 1px solid black;
+    border: none;
     width: 200px;
     background: none;
     height: 300px;
     cursor: pointer;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
 }
 
 .inner {
